# jhfan88-liboz

./: .gitignore  CMakeLists.txt
cmake/: 3rdparty.cmake  FindCairo.cmake  FindGLEW.cmake  FindLibav.cmake  FindMatlab.cmake  SetupCPack.cmake  SetupCUDA.cmake  StageTarget.cmake  Utils.cmake
main/: CMakeLists.txt  main.cpp
oz/: CMakeLists.txt  akf.cu  akf.h  akf_opt.cu  akf_opt.h  akf_opt2.cu  akf_opt2.h  akf_opt3.cu  akf_opt3.h  akf_opt4.cu  akf_opt4.h  aniso_diff.cu  aniso_diff.h  aniso_gauss.cu  aniso_gauss.h  apparent_gray.cu  apparent_gray.h  beltrami.cu  beltrami.h  bilateral.cu  bilateral.h  blend.cu  blend.h  blit.cu  blit.h  bump.cu  bump.h  cairo_support.cpp  cairo_support.h  cgp.cu  cgp.h  cmcf.cu  cmcf.h  color.cu  color.h  color_util.h  colorflow.cu  colorflow.h  colorflow_util.h  colormap.cu  (+230 more)
pyoz/: CMakeLists.txt  numpy.cpp  numpy.h  pyoz.i
test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  module.cpp  module.h  moduledialog.cpp  moduledialog.h  moduledialog.ui  modulelist.cpp  modulelist.h  resources.qrc  simplemodule.cpp  simplemodule.h
test/artistic/: main.cpp  oilpaint.cpp  oilpaint.h  watercolor.cpp  watercolor.h
test/cefabs/: flowshock.cpp  flowshock.cu  flowshock.h  ivacef.cpp  ivacef.h  main.cpp  ssia.cpp  ssia.h
test/color2gray/: apparentgray.cpp  apparentgray.h  main.cpp  spatialcolor2gray.cpp  spatialcolor2gray.h
test/flowabs/: bilateral.cpp  bilateral.h  colordog.cpp  colordog.cu  colordog.h  flowabs.cpp  flowabs.h  main.cpp  oabftest.cpp  oabftest.h  wog.cpp  wog.h
test/kuwahara/: akftest.cpp  akftest.h  fftgkftest.cpp  fftgkftest.h  gkftest.cpp  gkftest.h  kuwahara.cpp  kuwahara.h  main.cpp  msakftest.cpp  msakftest.h
test/pde/: anisodiff.cpp  anisodiff.h  main.cpp  mcf.cpp  mcf.h  shock.cpp  shock.h  tensordiff.cpp  tensordiff.h
test/spikes/: cairotest.cpp  cairotest.h  convpyr_test.cpp  convpyr_test.h  fftconv.cpp  fftconv.h  ffttest.cpp  ffttest.h  filtertest.cpp  filtertest.h  laplace_eq_test.cpp  laplace_eq_test.h  main.cpp  noise.cpp  noise.h  otsu.cpp  otsu.h  reductiontest.cpp  reductiontest.cu  reductiontest.h  resample.cpp  resample.h  resize.cpp  resize.h  tvl1flow.cpp  tvl1flow.h  variance.cpp  variance.h
test/st/: gradtest.cpp  gradtest.h  main.cpp  stinterp.cpp  stinterp.h  stinterp2.cpp  stinterp2.h  ststat.cpp  ststat.h  testpattern.cpp  testpattern.h  testring.cpp  testring.cu  testring.h
test/utility/: flowgroundtruth.cpp  flowgroundtruth.h  main.cpp  original.cpp  original.h
util/: CMakeLists.txt  cudadevicedialog.cpp  cudadevicedialog.h  fancystyle.cpp  fancystyle.h  glview.cpp  glview.h  imageview.cpp  imageview.h  imageview2.cpp  imageview2.h  logwindow.cpp  logwindow.h  param.cpp  param.h  paramui.cpp  paramui.h  propertyui.cpp  propertyui.h  rolloutbox.cpp  rolloutbox.h  settingscheck.cpp  settingscheck.h  settingscheck_version.h.in  stable.h  videocontrols.cpp  videocontrols.h  videoplayer.cpp  videoplayer.h
